--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -4,11 +4,11 @@ require:
   - rubocop-rspec
 inherit_from: .rubocop_todo.yml
 
-Metrics/LineLength:
+Layout/LineLength:
   Max: 150
 RSpec/ExampleLength:
   Max: 15
-Documentation:
+Style/Documentation:
   Enabled: false
 Style/FrozenStringLiteralComment:
   Enabled: false
